corrections and clearing the code

--- a/fontello/config.json
+++ b/fontello/config.json
@@ -17,6 +17,12 @@
       "css": "menu",
       "code": 61448,
       "src": "mfglabs"
+    },
+    {
+      "uid": "5e0a374728ffa8d0ae1f331a8f648231",
+      "css": "github",
+      "code": 61715,
+      "src": "fontawesome"
     }
   ]
 }
