--- a/.htaccess
+++ b/.htaccess
@@ -9,3 +9,4 @@ RewriteRule cookies cookies.htm
 RewriteRule domek domek.htm
 RewriteRule czas czas.htm
 RewriteRule baza-danych baza-danych.htm
+RewriteRule u4 u4.htm
