--- a/.htaccess
+++ b/.htaccess
@@ -10,3 +10,4 @@ RewriteRule domek domek.htm
 RewriteRule czas czas.htm
 RewriteRule baza-danych baza-danych.htm
 RewriteRule u4 u4.htm
+RewriteRule pp pp.htm
