--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,6 @@ RewriteEngine on
 RewriteRule cookies cookies.htm
 RewriteRule domek domek.htm
 RewriteRule czas czas.htm
-RewriteRule baza-danych baza-danych.htm
+RewriteRule pma baza-danych.htm
 RewriteRule u4 u4.htm
 RewriteRule pp pp.htm
