--- a/.htaccess
+++ b/.htaccess
@@ -11,3 +11,4 @@ RewriteRule czas czas.htm
 RewriteRule baza-danych baza-danych.htm
 RewriteRule u4 u4.htm
 RewriteRule pp pp.htm
+RewriteRule chart wykresy.htm
