--- a/.htaccess
+++ b/.htaccess
@@ -7,7 +7,7 @@ Deny from all
 RewriteEngine on
 RewriteRule cookies cookies.htm
 RewriteRule domek domek.htm
-RewriteRule chart wykresy.htm
+RewriteRule chart2 wykresy.htm
 RewriteRule czas czas.htm
 RewriteRule baza-danych baza-danych.htm
 RewriteRule u4 u4.htm
