--- a/.htaccess
+++ b/.htaccess
@@ -12,4 +12,5 @@ RewriteRule czas czas.htm
 RewriteRule baza-danych baza-danych.htm
 RewriteRule u4 u4.htm
 RewriteRule u5 u5.htm
+RewriteRule u6 u6.htm
 RewriteRule pp pp.htm
