--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,7 @@ Deny from all
 RewriteEngine on
 RewriteRule cookies cookies.htm
 RewriteRule domek domek.htm
+RewriteRule kwadratowa kwadratowa.htm
 RewriteRule chart wykresy.htm
 RewriteRule czas czas.htm
 RewriteRule baza-danych baza-danych.htm
